--- a/scripts/install
+++ b/scripts/install
@@ -6,6 +6,7 @@ path=$2
 is_public=$3
 title=$4
 privatelinkbydefault=$5
+admin=$6
 
 
 # Check domain/path availability
@@ -27,58 +28,28 @@ do
 done
 
 salt=$(dd if=/dev/urandom bs=1 count=200 2> /dev/null | tr -c -d 'A-Za-z0-9' | sed -n 's/\(.\{24\}\).*/\1/p')
+if [ $privatelinkbydefault = "No" ]; then
+  privatelinkbydefault_php=false
+else
+  privatelinkbydefault_php=true
+fi
 
-user_count=0
-for user in $(sudo yunohost user list | python user_list.py)
-do
-    if [[ ! $user == yunohost.* ]];
-    then
-    
-        YNH_LOGINS=$(cat << EOF
-$YNH_LOGINS\\
-$user_count => $user,
-EOF
-)
+sudo sed -i "s@YNH_SALT@$salt@g" ../conf/init_config.php
+sudo sed -i "s@YNH_TIMEZONE@$(cat /etc/timezone)@g" ../conf/init_config.php
+sudo sed -i "s@YNH_TITLE@$title@g" ../conf/init_config.php
+sudo sed -i "s@YNH_PRIVATE_LINK_BY_DEFAULT@$privatelinkbydefault_php@g" ../conf/init_config.php
+sudo sed -i "s@YNH_ADMIN@$admin@g" ../conf/init_config.php
 
-        YNH_PASSWORDS=$(cat << EOF
-$YNH_PASSWORDS\\
-$user => '',
-EOF
-)
-
-        YNH_LEVELS=$(cat << EOF
-$YNH_LEVELS\\
-$user => 2,
-EOF
-)
-
-        YNH_EMAILS=$(cat << EOF
-$YNH_EMAILS\\
-$user => ''
-EOF
-)
-
-        let user_count++
-    fi
-done
-
-sudo sed -i "s@YNH_LOGINS@$YNH_LOGINS@g" ../conf/config.php
-sudo sed -i "s@YNH_PASSWORDS@$YNH_PASSWORDS@g" ../conf/config.php
-sudo sed -i "s@YNH_LEVELS@$YNH_LEVELS@g" ../conf/config.php
-sudo sed -i "s@YNH_EMAILS@$YNH_EMAILS@g" ../conf/config.php
-sudo sed -i "s@YNH_SALT@$salt@g" ../conf/config.php
-sudo sed -i "s@YNH_TIMEZONE@$(cat /etc/timezone)@g" ../conf/config.php
-sudo sed -i "s@YNH_TITLE@$title@g" ../conf/config.php
-sudo sed -i "s@YNH_PRIVATE_LINK_BY_DEFAULT@$privatelinkbydefault@g" ../conf/config.php
-
-sudo cp ../conf/config.php $app_home_path/data
+sudo cp ../conf/options.php $app_home_path/data/options.php
+sudo cp ../conf/init_config.php $app_home_path/data/config.php
+sudo php ../conf/init_config_user.php $(sudo yunohost user list | python ../conf/user_list.py)
 
 sudo find $final_path -type f | xargs sudo chmod 644
 sudo find $final_path -type d | xargs sudo chmod 755
 sudo chown -R root: $final_path
 
-sudo find $app_home_path -type f | xargs sudo chmod 640
-sudo find $app_home_path -type d | xargs sudo chmod 750
+sudo find $app_home_path -type f | xargs sudo chmod 600
+sudo find $app_home_path -type d | xargs sudo chmod 700
 sudo chown -R www-data: $app_home_path
 
 # Modify Nginx configuration file and copy it to Nginx conf directory
