--- a/scripts/install
+++ b/scripts/install
@@ -15,6 +15,9 @@ if [[ ! $? -eq 0 ]]; then
   exit 1
 fi
 
+# Install dependencies
+sudo apt-get install php5-cli
+
 # Copy files to the right place
 app_home_path=/home/yunohost.app/shaarli
 final_path=/var/www/shaarli
