--- a/scripts/install
+++ b/scripts/install
@@ -17,13 +17,14 @@ app=$YNH_APP_INSTANCE_NAME
 
 # Retrieve arguments
 domain=$YNH_APP_ARG_DOMAIN
-path_url=$YNH_APP_ARG_PATH
+path=$YNH_APP_ARG_PATH
 admin=$YNH_APP_ARG_ADMIN
 is_public=$YNH_APP_ARG_IS_PUBLIC
 title=$YNH_APP_ARG_TITLE
 privatelinkbydefault=$YNH_APP_ARG_PRIVATELINKBYDEFAULT
 password=$YNH_APP_ARG_PASSWORD
 privateinstance=$YNH_APP_ARG_PRIVATEINSTANCE
+path_url=$YNH_APP_ARG_PATH
 
 # Load common variables and helpers
 source ./_common.sh
