Make sure path always end with a "/"
Fix https://github.com/YunoHost-Apps/shaarli_ynh/issues/28 (Nginx configuration for / install broken)

--- a/scripts/install
+++ b/scripts/install
@@ -17,7 +17,7 @@ app=$YNH_APP_INSTANCE_NAME
 
 # Retrieve arguments
 domain=$YNH_APP_ARG_DOMAIN
-path=$YNH_APP_ARG_PATH
+path=$YNH_APP_ARG_PATH/
 admin=$YNH_APP_ARG_ADMIN
 is_public=$YNH_APP_ARG_IS_PUBLIC
 title=$YNH_APP_ARG_TITLE
