--- a/scripts/install
+++ b/scripts/install
@@ -75,7 +75,7 @@ ynh_app_setting_set $app is_public $is_public
 
 
 # Install dependencies
-ynh_install_app_dependencies php5-cli 
+ynh_install_app_dependencies php-cli 
 
 
 #=================================================
@@ -113,6 +113,28 @@ sudo find $final_path -type d | xargs sudo chmod 755
 
 # Set right permissions for curl install
 chown -R $app: $final_path
+
+#=================================================
+# SETUP LOGROTATE
+#=================================================
+
+### `ynh_use_logrotate` is used to configure a logrotate configuration for the logs of this app.
+### Use this helper only if there is effectively a log file for this app.
+### If you're not using this helper:
+###		- Remove the section "BACKUP LOGROTATE" in the backup script
+###		- Remove also the section "REMOVE LOGROTATE CONFIGURATION" in the remove script
+###		- As well as the section "RESTORE THE LOGROTATE CONFIGURATION" in the restore script
+###		- And the section "SETUP LOGROTATE" in the upgrade script
+
+# Use logrotate to manage application logfile(s)
+ynh_use_logrotate "$final_path/data/log.txt"
+
+
+#=================================================
+# SETUP FAIL2BAN
+#=================================================
+
+ynh_add_fail2ban_config "$final_path/data/log.txt" "\s-\s<HOST>\s-\sLogin failed for user.*$" 5
 
 #=================================================
 # SETUP SSOWAT
