--- a/scripts/install
+++ b/scripts/install
@@ -13,8 +13,13 @@ source /usr/share/yunohost/helpers
 # MANAGE SCRIPT FAILURE
 #=================================================
 
+ynh_clean_setup () {
+	### Remove this function if there's nothing to clean before calling the remove script.
+	true
+}
 # Exit if an error occurs during the execution of the script
 ynh_abort_if_errors
+
 
 #=================================================
 # RETRIEVE ARGUMENTS FROM THE MANIFEST
@@ -42,9 +47,11 @@ app=$YNH_APP_INSTANCE_NAME
 
 
 #=================================================
-# CHECK IF THE APP CAN BE INSTALLED WITH THIS ARGS
+# CHECK IF THE APP CAN BE INSTALLED WITH THESE ARGS
 #=================================================
 
+### If the app uses nginx as web server (written in HTML/PHP in most cases), the final path should be "/var/www/$app".
+### If the app provides an internal web server (or uses another application server such as uwsgi), the final path should be "/opt/yunohost/$app"
 final_path=/var/www/$app
 test ! -e "$final_path" || ynh_die "This path already contains a folder"
 
@@ -57,14 +64,6 @@ ynh_webpath_available $domain $path_url
 ynh_webpath_register $app $domain $path_url
 
 
-
-# Check that the options are compatible
-if [ $is_public = "Yes" ]; then
-  if [ $privateinstance = "Yes" ] ; then
-    ynh_die "Incompatible options: the instance cannot be both public and private" 1
-  fi
-fi
-
 #=================================================
 # STORE SETTINGS FROM MANIFEST
 #=================================================
@@ -75,7 +74,7 @@ ynh_app_setting_set $app is_public $is_public
 
 
 # Install dependencies
-ynh_install_app_dependencies php-cli 
+ynh_install_app_dependencies 'php5-cli|php-cli' php-gettext 'php5-curl|php-curl' 'php-intl|php5-intl'  php-gd 'php-mbstring|base-files(<<9.0)' openssl
 
 
 #=================================================
