--- a/scripts/install
+++ b/scripts/install
@@ -13,8 +13,13 @@ source /usr/share/yunohost/helpers
 # MANAGE SCRIPT FAILURE
 #=================================================
 
+ynh_clean_setup () {
+	### Remove this function if there's nothing to clean before calling the remove script.
+	true
+}
 # Exit if an error occurs during the execution of the script
 ynh_abort_if_errors
+
 
 #=================================================
 # RETRIEVE ARGUMENTS FROM THE MANIFEST
@@ -42,9 +47,11 @@ app=$YNH_APP_INSTANCE_NAME
 
 
 #=================================================
-# CHECK IF THE APP CAN BE INSTALLED WITH THIS ARGS
+# CHECK IF THE APP CAN BE INSTALLED WITH THESE ARGS
 #=================================================
 
+### If the app uses nginx as web server (written in HTML/PHP in most cases), the final path should be "/var/www/$app".
+### If the app provides an internal web server (or uses another application server such as uwsgi), the final path should be "/opt/yunohost/$app"
 final_path=/var/www/$app
 test ! -e "$final_path" || ynh_die "This path already contains a folder"
 
@@ -57,14 +64,6 @@ ynh_webpath_available $domain $path_url
 ynh_webpath_register $app $domain $path_url
 
 
-
-# Check that the options are compatible
-if [ $is_public = "Yes" ]; then
-  if [ $privateinstance = "Yes" ] ; then
-    ynh_die "Incompatible options: the instance cannot be both public and private" 1
-  fi
-fi
-
 #=================================================
 # STORE SETTINGS FROM MANIFEST
 #=================================================
@@ -75,7 +74,7 @@ ynh_app_setting_set $app is_public $is_public
 
 
 # Install dependencies
-ynh_install_app_dependencies php5-cli 
+ynh_install_app_dependencies 'php5-cli|php-cli' php-gettext 'php5-curl|php-curl' 'php-intl|php5-intl'  'php-gd|php5-gd' 'php-mbstring|base-files(<<9.0)' openssl
 
 
 #=================================================
@@ -115,17 +114,35 @@ sudo find $final_path -type d | xargs sudo chmod 755
 chown -R $app: $final_path
 
 #=================================================
+# SETUP LOGROTATE
+#=================================================
+
+### `ynh_use_logrotate` is used to configure a logrotate configuration for the logs of this app.
+### Use this helper only if there is effectively a log file for this app.
+### If you're not using this helper:
+###		- Remove the section "BACKUP LOGROTATE" in the backup script
+###		- Remove also the section "REMOVE LOGROTATE CONFIGURATION" in the remove script
+###		- As well as the section "RESTORE THE LOGROTATE CONFIGURATION" in the restore script
+###		- And the section "SETUP LOGROTATE" in the upgrade script
+
+# Use logrotate to manage application logfile(s)
+ynh_use_logrotate "$final_path/data/log.txt"
+
+
+#=================================================
+# SETUP FAIL2BAN
+#=================================================
+
+ynh_add_fail2ban_config "$final_path/data/log.txt" "\s-\s<HOST>\s-\sLogin failed for user.*$" 5
+
+#=================================================
 # SETUP SSOWAT
 #=================================================
 
-if [ $is_public -eq 0 ]
-then	# Remove the public access
-	ynh_app_setting_delete $app skipped_uris
-fi
 # Make app public if necessary
 if [ $is_public -eq 1 ]
 then
-	# unprotected_uris allows SSO credentials to be passed anyway.
+	# unprotected_uris allows SSO credentials to be passed anyway
 	ynh_app_setting_set $app unprotected_uris "/"
 fi
 
