--- a/scripts/install
+++ b/scripts/install
@@ -159,7 +159,7 @@ ynh_use_logrotate "$final_path/data/log.txt"
 # SETUP FAIL2BAN
 #=================================================
 ynh_print_info "Add Fail2Ban configuration..."
-ynh_add_fail2ban_config "$final_path/data/log.txt" "\s-\s<HOST>\s-\sLogin failed for user.*$" 5
+ynh_add_fail2ban_config_temp "$final_path/data/log.txt" "\s-\s<HOST>\s-\sLogin failed for user.*$" 5
 
 #=================================================
 # SETUP SSOWAT
