Updated to V0.12.0 and Nginx fix (#57)
* Set file permissions after creating the log (#53) (#54)

Should fix #49

Authored-by: tituspijean <tituspijean@outlook.com>

* Updated to version v0.12.0

* Fix images

* Fixed path in nginx

Co-authored-by: lapineige <lapineige@users.noreply.github.com>
Co-authored-by: anmol <anmol@jswan2.com>
Co-authored-by: Éric Gaspar <46165813+ericgaspar@users.noreply.github.com>

--- a/scripts/install
+++ b/scripts/install
@@ -43,15 +43,15 @@ app=$YNH_APP_INSTANCE_NAME
 #=================================================
 # CHECK IF THE APP CAN BE INSTALLED WITH THESE ARGS
 #=================================================
-ynh_print_info "Validating installation parameters..."
+ynh_script_progression --message="Validating installation parameters..."
 
 ### If the app uses nginx as web server (written in HTML/PHP in most cases), the final path should be "/var/www/$app".
 ### If the app provides an internal web server (or uses another application server such as uwsgi), the final path should be "/opt/yunohost/$app"
 final_path=/var/www/$app
-test ! -e "$final_path" || ynh_die "This path already contains a folder"
+test ! -e "$final_path" || ynh_die --message="This path already contains a folder"
 
 # Register (book) web path
-ynh_webpath_register $app $domain $path_url
+ynh_webpath_register --app=$app --domain=$domain --path_url=$path_url
 
 
 #=================================================
@@ -59,15 +59,15 @@ ynh_webpath_register $app $domain $path_url
 #=================================================
 ynh_print_info "Storing installation settings..."
 
-ynh_app_setting_set $app domain $domain
-ynh_app_setting_set $app path $path_url
-ynh_app_setting_set $app is_public $is_public
+ynh_app_setting_set --app=$app --key=domain    --value=$domain
+ynh_app_setting_set --app=$app --key=path      --value=$path_url
+ynh_app_setting_set --app=$app --key=is_public --value=$is_public
 
 
 #=================================================
 # INSTALL DEPENDENCIES
 #=================================================
-ynh_print_info "Installing dependencies..."
+ynh_script_progression --message="Installing dependencies..."
 
 ### `ynh_install_app_dependencies` allows you to add any "apt" dependencies to the package.
 ### Those deb packages will be installed as dependencies of this package.
@@ -82,20 +82,19 @@ ynh_install_app_dependencies $pkg_dependencies
 #=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
 #=================================================
-ynh_print_info "Setting up source files..."
-
+ynh_script_progression --message="Setting up source files..."
 ### `ynh_setup_source` is used to install an app from a zip or tar.gz file,
 ### downloaded from an upstream source, like a git repository.
 ### `ynh_setup_source` use the file conf/app.src
 
-ynh_app_setting_set $app final_path $final_path
+ynh_app_setting_set --app=$app --key=final_path --value=$final_path
 # Download, check integrity, uncompress and patch the source from app.src
-ynh_setup_source "$final_path"
+ynh_setup_source --dest_dir="$final_path"
 
 #=================================================
 # NGINX CONFIGURATION
 #=================================================
-ynh_print_info "Configuring nginx web server..."
+ynh_script_progression --message="Configuring nginx web server..."
 
 ### `ynh_add_nginx_config` will use the file conf/nginx.conf
 
@@ -105,10 +104,9 @@ ynh_add_nginx_config
 #=================================================
 # CREATE DEDICATED USER
 #=================================================
-ynh_print_info "Configuring system user..."
-
+ynh_script_progression --message="Configuring system user..."
 # Create a system user
-ynh_system_user_create $app
+ynh_system_user_create --username=$app
 
 #=================================================
 # PHP-FPM CONFIGURATION
@@ -127,12 +125,12 @@ ynh_print_info "Configuring php-fpm..."
 ###		- And the section "PHP-FPM CONFIGURATION" in the upgrade script
 
 # Create a dedicated php-fpm config
-ynh_add_fpm_config
+ynh_add_fpm_config --usage=low --footprint=low --package="$extra_php_dependencies"
 
 #=================================================
 # SETUP LOGROTATE
 #=================================================
-ynh_print_info "Configuring log rotation..."
+ynh_script_progression --message="Configuring log rotation..."
 
 ### `ynh_use_logrotate` is used to configure a logrotate configuration for the logs of this app.
 ### Use this helper only if there is effectively a log file for this app.
@@ -143,7 +141,6 @@ ynh_print_info "Configuring log rotation..."
 ###		- And the section "SETUP LOGROTATE" in the upgrade script
 
 # Use logrotate to manage application logfile(s)
-# We gotta create the file explicitly to avoid triggering https://github.com/YunoHost/issues/issues/1390
 touch "$final_path/data/log.txt"
 ynh_use_logrotate "$final_path/data/log.txt"
 
@@ -151,41 +148,45 @@ ynh_use_logrotate "$final_path/data/log.txt"
 # SECURE FILES AND DIRECTORIES
 #=================================================
 # set proper permissions
-ynh_print_info "Set permissions..."
+ynh_script_progression --message="Set permissions..."
+
 find $final_path -type f | xargs chmod 644
 find $final_path -type d | xargs chmod 755
 
 # Set right permissions for curl install
-ynh_print_info "Set rights..."
+ynh_script_progression --message="Set rights..."
+
 chown -R $app: $final_path
 
 #=================================================
 # SETUP FAIL2BAN
 #=================================================
-ynh_print_info "Add Fail2Ban configuration..."
-ynh_add_fail2ban_config_temp "$final_path/data/log.txt" "\s-\s<HOST>\s-\sLogin failed for user.*$" 5
+ynh_script_progression --message="Configuring fail2ban..."
+
+# Create a dedicated fail2ban config
+
+ynh_add_fail2ban_config --logpath="$final_path/data/log.txt" --failregex="\s-\s<HOST>\s-\sLogin failed for user.*$"
 
 #=================================================
 # SETUP SSOWAT
 #=================================================
-ynh_print_info "Configuring SSOwat..."
+ynh_script_progression --message="Configuring SSOwat..."
 
 # Make app public if necessary
 if [ $is_public -eq 1 ]
 then
 	# unprotected_uris allows SSO credentials to be passed anyway.
-	ynh_app_setting_set $app unprotected_uris "/"
+	ynh_app_setting_set --app=$app --key=unprotected_uris --value="/"
 fi
-
 #=================================================
 # RELOAD NGINX
 #=================================================
-ynh_print_info "Reloading nginx web server..."
+ynh_script_progression --message="Reloading nginx web server..."
 
-systemctl reload nginx
+ynh_systemd_action --service_name=nginx --action=reload
 
 #=================================================
 # END OF SCRIPT
 #=================================================
 
-ynh_print_info "Installation of $app completed"
+ynh_script_progression --message="Installation of $app completed"
