--- a/scripts/install
+++ b/scripts/install
@@ -70,6 +70,13 @@ ynh_setup_source --dest_dir="$final_path"
 #=================================================
 ynh_script_progression --message="Configuring NGINX web server..."
 
+# Bug in Nginx with locations and aliases (see http://stackoverflow.com/a/35102259 )
+if [ $path_url = "/" ]; then
+  ynh_replace_string "__PATH_HACK__" "" "../conf/nginx.conf"
+else
+  ynh_replace_string "__PATH_HACK__" "$path_url/$path_url" "../conf/nginx.conf"
+fi
+
 # Create a dedicated NGINX config
 ynh_add_nginx_config
 
